letmebuy: fix relaciontship and entities payment